로그인 시큐리티 로그인

--- a/ch05_spring_security_login_custom/src/main/resources/templates/index.html
+++ b/ch05_spring_security_login_custom/src/main/resources/templates/index.html
@@ -32,7 +32,7 @@
         </ul>
         <ul class="navbar-nav ml-auto">
             <li class="nav-item">
-                <form th:action="@{/logout}" method="post">
+                <form th:action="@{/doLogout}" method="post">
                     <button class="btn btn-danger" type="submit">logout</button>
                 </form>
             </li>
